--- a/package.json
+++ b/package.json
@@ -6,41 +6,33 @@
     "type": "git",
     "url": "git+https://github.com/anuragsoni/fetch.git"
   },
-  "keywords": [
-    "ocaml",
-    "REST",
-    "http"
-  ],
+  "keywords": [ "ocaml", "REST", "http" ],
   "author": "Anurag Soni <anurag@sonianurag.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/anuragsoni/fetch/issues"
-  },
+  "bugs": { "url": "https://github.com/anuragsoni/fetch/issues" },
   "homepage": "https://github.com/anuragsoni/fetch#readme",
-  "esy": {
-    "build": "dune build"
-  },
+  "esy": { "build": "dune build" },
   "scripts": {
     "build:example": "esy dune build example/client_example.exe",
     "format": "esy dune build @fmt",
     "promote": "esy dune promote"
   },
-  "devDependencies": {
-    "@opam/ocamlformat": "*",
-    "@opam/merlin": "*"
-  },
+  "devDependencies": { "@opam/ocamlformat": "*", "@opam/merlin": "*" },
   "dependencies": {
-    "ocaml": "~4.7.0",
     "@opam/dune": "*",
-    "@opam/lwt": "*",
-    "@opam/logs": "*",
+    "@opam/fmt": "*",
     "@opam/httpaf": "*",
     "@opam/httpaf-lwt": "*",
-    "@opam/fmt": "*",
-    "@opam/uri": "*"
+    "@opam/logs": "*",
+    "@opam/lwt": "*",
+    "@opam/lwt_ppx": "1.2.1",
+    "@opam/uri": "*",
+    "ocaml": "~4.7.0"
   },
   "resolutions": {
-    "@opam/httpaf": "inhabitedtype/httpaf:httpaf.opam#53042e514760fc51b1cf3c5dff08bcc93e8c99a4",
-    "@opam/httpaf-lwt": "inhabitedtype/httpaf:httpaf-lwt.opam#53042e514760fc51b1cf3c5dff08bcc93e8c99a4"
+    "@opam/httpaf":
+      "inhabitedtype/httpaf:httpaf.opam#53042e514760fc51b1cf3c5dff08bcc93e8c99a4",
+    "@opam/httpaf-lwt":
+      "inhabitedtype/httpaf:httpaf-lwt.opam#53042e514760fc51b1cf3c5dff08bcc93e8c99a4"
   }
 }
