update opam file

--- a/fetch.opam
+++ b/fetch.opam
@@ -18,11 +18,7 @@ depends: [
   "lwt"
   "fmt"
   "httpaf"
-  "httpaf-lwt"
-]
-pin-depends: [
-  [ "httpaf.dev" "git+https://github.com/inhabitedtype/httpaf.git#53042e514760fc51b1cf3c5dff08bcc93e8c99a4" ]
-  [ "httpaf-lwt.dev" "git+https://github.com/inhabitedtype/httpaf.git#53042e514760fc51b1cf3c5dff08bcc93e8c99a4" ]
+  "httpaf-lwt-unix"
 ]
 synopsis: """
 A small wrapper around Httpaf_async's client module
